syntax = "proto3";

package PbApp;

message Connection
{
    string ip = 1;
    string port = 2;
    string mode = 3;
}

message AppConfig
{
    uint64 loginTimestamp = 1;
    uint32 colorTheme = 2;
    uint32 mode = 3;
    Connection connection = 4;
    map<string, Connection> savedConnections = 5;
    repeated string activeTabs = 6;
    map<string, string> filesPaths = 7;  
    map<string, string> stringCache = 8;
    map<string, bool> boolCache = 9;
}